modified:   _config.yml 	modified:   _data/menus.yml 	modified:   _team/mike-vance.md 	modified:   _team/peter-van-eijk.md 	modified:   _team/robert-johnson.md 	modified:   _team/sage-kirk.md 	modified:   _team/susan-shelton.md 	modified:   _team/tamara-ells.md 	modified:   index.md 	modified:   services.md 	modified:   team.md

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-baseurl: 'uestc-auto-2023060901.github.io'
+baseurl: '/uestc-auto-2023060901.github.io/'
 permalink: pretty
-title: 'Jekyll Serif'
+title: "UESTC AUTO"
 
 logo:
   mobile: "images/logo/logo-mobile.svg"
